@@ -1,6 +1,6 @@
 Incomplete raw ToDo list:
 ==========================
-$Id: TODO,v 1.4 2004/06/20 10:02:41 rdenisc Exp $
+$Id: TODO,v 1.5 2004/06/26 19:55:28 rdenisc Exp $
 
 Features:
 ----------
@@ -22,10 +22,16 @@ Conformance:
 - queueing of more than one packet toward restricted NATs,
 - implement proper/draft-compliant timeouts,
 
+Testing:
+---------
+- fe80::/64 IPv6 relay address bubble,
+- unassigned relay IPv4 address.
+
 Portability:
 -------------
 - big-endianess/byte-alignment compatibility tests,
-- Solaris & FreeBSD compilation,
+- Solaris compilation,
+- FreeBSD tunneling tests,
 
 Compatibility:
 ---------------
